Add: UnitTest files in ~/test/*/models. Update: README.md